#84443 - Fix overflow on x axis

--- a/Snowdog_Components/components/Atoms/_base/_base.scss
+++ b/Snowdog_Components/components/Atoms/_base/_base.scss
@@ -26,6 +26,7 @@ body {
 .page-wrapper {
     flex: $page-wrapper-flex;
     margin-bottom: $page-wrapper-margin-bottom;
+    overflow-x: hidden;
 }
 
 #maincontent { // sass-lint:disable-line no-ids
